Structure packages skipped in deploy